# lead-scope-ai

./: .bandit  .env.example  .gitignore  .gitignore.txt  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  ai_engine.py  classifier.py  config.py  debug_page.html  exceptions.py  logger.py  main.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  scope_engine.py  scraper.py  taxonomy.py  test_main.py  test_validators.py  validators.py
backend/tests/: test_classifier.py
frontend/: .prettierrc  Dockerfile  jest.config.js  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: DashboardView.tsx  FinalDashboard.tsx  ScopeGrid.tsx
frontend/components/: FinalDashboard.tsx  InfoField.tsx  PainCard.tsx  QuestionCard.tsx  ScopeGrid.tsx  ScopeTile.tsx
frontend/components/__tests__/: PainCard.test.tsx
frontend/hooks/: useAssessment.ts  usePainCardSelection.ts
frontend/hooks/__tests__/: useAssessment.test.ts
frontend/lib/: scope-data.ts
frontend/types/: index.ts
